tests/bad/bad46.tig
type iarr = array of int
var arr := iarr[100] of 42

var idx := range(1,5) * range(5,10) + range (0,50) * range(0,1)

var access1 := arr[idx-6]
var access2 := arr[idx]

var idx := (range(1,5) * range(5,10) + range (0,50) * range(0,1)) / range(0,5)

var access2 := arr[idx-2]